fix language switcher not showing on mobile

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -155,10 +155,6 @@ textarea {
 
 }
 
-.sidebar form {
-  padding: .5rem 1rem;
-}
-
 .bg-trintel {
   background-color: #54617f !important;
 }
